// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CircleIcon renders correctly when given svgData 1`] = `
<styled.div
  theme={
    Object {
      "backgroundDanger": "#ED524C",
      "backgroundDangerDisabled": "#E6E7E8",
      "backgroundInput": "#FFFFFF",
      "backgroundPrimary": "#50A5E7",
      "backgroundPrimaryDisabled": "#E6E7E8",
      "backgroundSecondary": "#FFFFFF",
      "backgroundSecondaryDisabled": "#FFFFFF",
      "backgroundSecondaryHover": "#FFFFFF",
      "textBody": "#3F484B",
      "textDanger": "#FFFFFF",
      "textDangerDisabled": "#CDD0D2",
      "textDangerHover": "#FFFFFF",
      "textHeading": "#3F484B",
      "textIcon": "#FFFFFF",
      "textIconInvert": "#222729",
      "textInput": "#3F484B",
      "textInputFocus": "#8B9193",
      "textInputInvalid": "#E92720",
      "textInputPlaceholder": "#8B9193",
      "textPrimary": "#3F484B",
      "textPrimaryDisabled": "#8B9193",
      "textPrimaryHover": "#FFFFFF",
      "textPrimaryInvert": "#FFFFFF",
      "textSecondary": "#3F484B",
      "textSecondaryDisabled": "#CDD0D2",
      "textSecondaryHover": "#FFFFFF",
      "textSubtitle": "#8B9193",
    }
  }
>
  <SVGIcon
    invert={true}
    svgData={<g />}
    theme={
      Object {
        "backgroundDanger": "#ED524C",
        "backgroundDangerDisabled": "#E6E7E8",
        "backgroundInput": "#FFFFFF",
        "backgroundPrimary": "#50A5E7",
        "backgroundPrimaryDisabled": "#E6E7E8",
        "backgroundSecondary": "#FFFFFF",
        "backgroundSecondaryDisabled": "#FFFFFF",
        "backgroundSecondaryHover": "#FFFFFF",
        "textBody": "#3F484B",
        "textDanger": "#FFFFFF",
        "textDangerDisabled": "#CDD0D2",
        "textDangerHover": "#FFFFFF",
        "textHeading": "#3F484B",
        "textIcon": "#FFFFFF",
        "textIconInvert": "#222729",
        "textInput": "#3F484B",
        "textInputFocus": "#8B9193",
        "textInputInvalid": "#E92720",
        "textInputPlaceholder": "#8B9193",
        "textPrimary": "#3F484B",
        "textPrimaryDisabled": "#8B9193",
        "textPrimaryHover": "#FFFFFF",
        "textPrimaryInvert": "#FFFFFF",
        "textSecondary": "#3F484B",
        "textSecondaryDisabled": "#CDD0D2",
        "textSecondaryHover": "#FFFFFF",
        "textSubtitle": "#8B9193",
      }
    }
    top={8}
    xsmall={true}
  />
</styled.div>
`;

exports[`CircleIcon renders correctly with undefined size attribute 1`] = `
<styled.div
  theme={
    Object {
      "backgroundDanger": "#ED524C",
      "backgroundDangerDisabled": "#E6E7E8",
      "backgroundInput": "#FFFFFF",
      "backgroundPrimary": "#50A5E7",
      "backgroundPrimaryDisabled": "#E6E7E8",
      "backgroundSecondary": "#FFFFFF",
      "backgroundSecondaryDisabled": "#FFFFFF",
      "backgroundSecondaryHover": "#FFFFFF",
      "textBody": "#3F484B",
      "textDanger": "#FFFFFF",
      "textDangerDisabled": "#CDD0D2",
      "textDangerHover": "#FFFFFF",
      "textHeading": "#3F484B",
      "textIcon": "#FFFFFF",
      "textIconInvert": "#222729",
      "textInput": "#3F484B",
      "textInputFocus": "#8B9193",
      "textInputInvalid": "#E92720",
      "textInputPlaceholder": "#8B9193",
      "textPrimary": "#3F484B",
      "textPrimaryDisabled": "#8B9193",
      "textPrimaryHover": "#FFFFFF",
      "textPrimaryInvert": "#FFFFFF",
      "textSecondary": "#3F484B",
      "textSecondaryDisabled": "#CDD0D2",
      "textSecondaryHover": "#FFFFFF",
      "textSubtitle": "#8B9193",
    }
  }
>
  <SVGIcon
    invert={true}
    svgData={
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fillRule="evenodd"
          transform="translate(1 1)"
        >
          <path
            d="M7 5.77L12.77 0 14 1.23 8.23 7 14 12.77 12.77 14 7 8.23 1.23 14 0 12.77 5.77 7 0 1.23 1.23 0 7 5.77z"
          />
        </g>
      </svg>
    }
    theme={
      Object {
        "backgroundDanger": "#ED524C",
        "backgroundDangerDisabled": "#E6E7E8",
        "backgroundInput": "#FFFFFF",
        "backgroundPrimary": "#50A5E7",
        "backgroundPrimaryDisabled": "#E6E7E8",
        "backgroundSecondary": "#FFFFFF",
        "backgroundSecondaryDisabled": "#FFFFFF",
        "backgroundSecondaryHover": "#FFFFFF",
        "textBody": "#3F484B",
        "textDanger": "#FFFFFF",
        "textDangerDisabled": "#CDD0D2",
        "textDangerHover": "#FFFFFF",
        "textHeading": "#3F484B",
        "textIcon": "#FFFFFF",
        "textIconInvert": "#222729",
        "textInput": "#3F484B",
        "textInputFocus": "#8B9193",
        "textInputInvalid": "#E92720",
        "textInputPlaceholder": "#8B9193",
        "textPrimary": "#3F484B",
        "textPrimaryDisabled": "#8B9193",
        "textPrimaryHover": "#FFFFFF",
        "textPrimaryInvert": "#FFFFFF",
        "textSecondary": "#3F484B",
        "textSecondaryDisabled": "#CDD0D2",
        "textSecondaryHover": "#FFFFFF",
        "textSubtitle": "#8B9193",
      }
    }
    top={8}
    xsmall={true}
  />
</styled.div>
`;

exports[`CircleIcon renders correctly with valid size 1`] = `
<styled.div
  large={true}
  theme={
    Object {
      "backgroundDanger": "#ED524C",
      "backgroundDangerDisabled": "#E6E7E8",
      "backgroundInput": "#FFFFFF",
      "backgroundPrimary": "#50A5E7",
      "backgroundPrimaryDisabled": "#E6E7E8",
      "backgroundSecondary": "#FFFFFF",
      "backgroundSecondaryDisabled": "#FFFFFF",
      "backgroundSecondaryHover": "#FFFFFF",
      "textBody": "#3F484B",
      "textDanger": "#FFFFFF",
      "textDangerDisabled": "#CDD0D2",
      "textDangerHover": "#FFFFFF",
      "textHeading": "#3F484B",
      "textIcon": "#FFFFFF",
      "textIconInvert": "#222729",
      "textInput": "#3F484B",
      "textInputFocus": "#8B9193",
      "textInputInvalid": "#E92720",
      "textInputPlaceholder": "#8B9193",
      "textPrimary": "#3F484B",
      "textPrimaryDisabled": "#8B9193",
      "textPrimaryHover": "#FFFFFF",
      "textPrimaryInvert": "#FFFFFF",
      "textSecondary": "#3F484B",
      "textSecondaryDisabled": "#CDD0D2",
      "textSecondaryHover": "#FFFFFF",
      "textSubtitle": "#8B9193",
    }
  }
>
  <SVGIcon
    invert={true}
    medium={true}
    svgData={
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fillRule="evenodd"
          transform="translate(1 1)"
        >
          <path
            d="M7 5.77L12.77 0 14 1.23 8.23 7 14 12.77 12.77 14 7 8.23 1.23 14 0 12.77 5.77 7 0 1.23 1.23 0 7 5.77z"
          />
        </g>
      </svg>
    }
    theme={
      Object {
        "backgroundDanger": "#ED524C",
        "backgroundDangerDisabled": "#E6E7E8",
        "backgroundInput": "#FFFFFF",
        "backgroundPrimary": "#50A5E7",
        "backgroundPrimaryDisabled": "#E6E7E8",
        "backgroundSecondary": "#FFFFFF",
        "backgroundSecondaryDisabled": "#FFFFFF",
        "backgroundSecondaryHover": "#FFFFFF",
        "textBody": "#3F484B",
        "textDanger": "#FFFFFF",
        "textDangerDisabled": "#CDD0D2",
        "textDangerHover": "#FFFFFF",
        "textHeading": "#3F484B",
        "textIcon": "#FFFFFF",
        "textIconInvert": "#222729",
        "textInput": "#3F484B",
        "textInputFocus": "#8B9193",
        "textInputInvalid": "#E92720",
        "textInputPlaceholder": "#8B9193",
        "textPrimary": "#3F484B",
        "textPrimaryDisabled": "#8B9193",
        "textPrimaryHover": "#FFFFFF",
        "textPrimaryInvert": "#FFFFFF",
        "textSecondary": "#3F484B",
        "textSecondaryDisabled": "#CDD0D2",
        "textSecondaryHover": "#FFFFFF",
        "textSubtitle": "#8B9193",
      }
    }
    top={12}
  />
</styled.div>
`;

exports[`CircleIcon renders correctly with valid size 2`] = `
<styled.div
  medium={true}
  theme={
    Object {
      "backgroundDanger": "#ED524C",
      "backgroundDangerDisabled": "#E6E7E8",
      "backgroundInput": "#FFFFFF",
      "backgroundPrimary": "#50A5E7",
      "backgroundPrimaryDisabled": "#E6E7E8",
      "backgroundSecondary": "#FFFFFF",
      "backgroundSecondaryDisabled": "#FFFFFF",
      "backgroundSecondaryHover": "#FFFFFF",
      "textBody": "#3F484B",
      "textDanger": "#FFFFFF",
      "textDangerDisabled": "#CDD0D2",
      "textDangerHover": "#FFFFFF",
      "textHeading": "#3F484B",
      "textIcon": "#FFFFFF",
      "textIconInvert": "#222729",
      "textInput": "#3F484B",
      "textInputFocus": "#8B9193",
      "textInputInvalid": "#E92720",
      "textInputPlaceholder": "#8B9193",
      "textPrimary": "#3F484B",
      "textPrimaryDisabled": "#8B9193",
      "textPrimaryHover": "#FFFFFF",
      "textPrimaryInvert": "#FFFFFF",
      "textSecondary": "#3F484B",
      "textSecondaryDisabled": "#CDD0D2",
      "textSecondaryHover": "#FFFFFF",
      "textSubtitle": "#8B9193",
    }
  }
>
  <SVGIcon
    invert={true}
    small={true}
    svgData={
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fillRule="evenodd"
          transform="translate(1 1)"
        >
          <path
            d="M7 5.77L12.77 0 14 1.23 8.23 7 14 12.77 12.77 14 7 8.23 1.23 14 0 12.77 5.77 7 0 1.23 1.23 0 7 5.77z"
          />
        </g>
      </svg>
    }
    theme={
      Object {
        "backgroundDanger": "#ED524C",
        "backgroundDangerDisabled": "#E6E7E8",
        "backgroundInput": "#FFFFFF",
        "backgroundPrimary": "#50A5E7",
        "backgroundPrimaryDisabled": "#E6E7E8",
        "backgroundSecondary": "#FFFFFF",
        "backgroundSecondaryDisabled": "#FFFFFF",
        "backgroundSecondaryHover": "#FFFFFF",
        "textBody": "#3F484B",
        "textDanger": "#FFFFFF",
        "textDangerDisabled": "#CDD0D2",
        "textDangerHover": "#FFFFFF",
        "textHeading": "#3F484B",
        "textIcon": "#FFFFFF",
        "textIconInvert": "#222729",
        "textInput": "#3F484B",
        "textInputFocus": "#8B9193",
        "textInputInvalid": "#E92720",
        "textInputPlaceholder": "#8B9193",
        "textPrimary": "#3F484B",
        "textPrimaryDisabled": "#8B9193",
        "textPrimaryHover": "#FFFFFF",
        "textPrimaryInvert": "#FFFFFF",
        "textSecondary": "#3F484B",
        "textSecondaryDisabled": "#CDD0D2",
        "textSecondaryHover": "#FFFFFF",
        "textSubtitle": "#8B9193",
      }
    }
    top={12}
  />
</styled.div>
`;

exports[`CircleIcon renders correctly with valid size 3`] = `
<styled.div
  small={true}
  theme={
    Object {
      "backgroundDanger": "#ED524C",
      "backgroundDangerDisabled": "#E6E7E8",
      "backgroundInput": "#FFFFFF",
      "backgroundPrimary": "#50A5E7",
      "backgroundPrimaryDisabled": "#E6E7E8",
      "backgroundSecondary": "#FFFFFF",
      "backgroundSecondaryDisabled": "#FFFFFF",
      "backgroundSecondaryHover": "#FFFFFF",
      "textBody": "#3F484B",
      "textDanger": "#FFFFFF",
      "textDangerDisabled": "#CDD0D2",
      "textDangerHover": "#FFFFFF",
      "textHeading": "#3F484B",
      "textIcon": "#FFFFFF",
      "textIconInvert": "#222729",
      "textInput": "#3F484B",
      "textInputFocus": "#8B9193",
      "textInputInvalid": "#E92720",
      "textInputPlaceholder": "#8B9193",
      "textPrimary": "#3F484B",
      "textPrimaryDisabled": "#8B9193",
      "textPrimaryHover": "#FFFFFF",
      "textPrimaryInvert": "#FFFFFF",
      "textSecondary": "#3F484B",
      "textSecondaryDisabled": "#CDD0D2",
      "textSecondaryHover": "#FFFFFF",
      "textSubtitle": "#8B9193",
    }
  }
>
  <SVGIcon
    invert={true}
    svgData={
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fillRule="evenodd"
          transform="translate(1 1)"
        >
          <path
            d="M7 5.77L12.77 0 14 1.23 8.23 7 14 12.77 12.77 14 7 8.23 1.23 14 0 12.77 5.77 7 0 1.23 1.23 0 7 5.77z"
          />
        </g>
      </svg>
    }
    theme={
      Object {
        "backgroundDanger": "#ED524C",
        "backgroundDangerDisabled": "#E6E7E8",
        "backgroundInput": "#FFFFFF",
        "backgroundPrimary": "#50A5E7",
        "backgroundPrimaryDisabled": "#E6E7E8",
        "backgroundSecondary": "#FFFFFF",
        "backgroundSecondaryDisabled": "#FFFFFF",
        "backgroundSecondaryHover": "#FFFFFF",
        "textBody": "#3F484B",
        "textDanger": "#FFFFFF",
        "textDangerDisabled": "#CDD0D2",
        "textDangerHover": "#FFFFFF",
        "textHeading": "#3F484B",
        "textIcon": "#FFFFFF",
        "textIconInvert": "#222729",
        "textInput": "#3F484B",
        "textInputFocus": "#8B9193",
        "textInputInvalid": "#E92720",
        "textInputPlaceholder": "#8B9193",
        "textPrimary": "#3F484B",
        "textPrimaryDisabled": "#8B9193",
        "textPrimaryHover": "#FFFFFF",
        "textPrimaryInvert": "#FFFFFF",
        "textSecondary": "#3F484B",
        "textSecondaryDisabled": "#CDD0D2",
        "textSecondaryHover": "#FFFFFF",
        "textSubtitle": "#8B9193",
      }
    }
    top={8}
    xsmall={true}
  />
</styled.div>
`;

exports[`CircleIcon renders nothing with invalid name 1`] = `""`;
